# TemplarEngine

./: .gitignore  CMakeLists.txt  README.md
src/: config.h  glad.c  linear_algebra.cpp  linear_algebra.h  loadShader.cpp  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
src/shaders/: fragment.txt  vertex.glsl  vertex.txt
